fix(native compilation) pom to get a jar ready for native compilation